[package]
name = "yz-basic-block"
description = "a simple Basic Block framework + optimizer"
version = "0.2.0"
authors = ["Erik Zscheile <zseri.devel@ytrizja.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/YZITE/basic-block"

[features]
default = ["std"]
std = ["thiserror"]

[dependencies]

[dependencies.either]
version = "1.6"
default-features = false

[dependencies.serde]
version = "1.0"
default-features = false
features = ["alloc", "derive"]
optional = true

[dependencies.thiserror]
version = "1.0"
optional = true
